#1011913: #3047 Mini-app make Grid responsive and fixes table height for data overflow

--- a/mini-app-example/src/main/resources/META-INF/resources/frontend/styles/grid.css
+++ b/mini-app-example/src/main/resources/META-INF/resources/frontend/styles/grid.css
@@ -22,10 +22,6 @@
     z-index: 0 !important;
 }
 
-.grid.scheduler-grid .tui-grid-body-area, .grid.scheduler-grid .tui-grid-body-area {
-    height: auto !important;
-}
-
 @media (min-width: 801px) {
 .grid.scheduler-grid .tui-grid-content-area, .grid.scheduler-grid .tui-grid-container .tui-grid-content-area {
      min-height: calc(100vh - 170px);
